--- a/style.css
+++ b/style.css
@@ -162,27 +162,29 @@ body {
 
 
 
-
-
 .hero {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 4rem;
-    padding: 8rem 4rem;
-    background: linear-gradient(135deg, #fff5e6, #fff);
     min-height: 100vh;
-    overflow: hidden;
+    background: linear-gradient(135deg, #fff5f5 0%, #ffe8e8 100%);
+}
+
+.hero__container {
+    max-width: 1400px;
+    margin: 0 auto;
+    padding: 0 40px;
 }
 
 .hero__content {
-    display: flex;
-    flex-direction: column;
-    gap: 4rem;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: 1.2fr 1fr;
+    gap: 60px;
+
 }
 
-.hero__headlines {
-    animation: fadeInLeft 1s ease;
+.hero__left {
+    display: flex;
+    flex-direction: column;
+    gap: 48px;
+    margin-top: 100px;
 }
 
 .hero__title {
@@ -201,7 +203,7 @@ body {
 }
 
 .hero__description {
-    font-size: 1.25rem;
+    font-size: 1.28rem;
     line-height: 1.6;
     color: #858585;
     max-width: 400px;
@@ -284,19 +286,35 @@ body {
     font-size: 1.1rem;
 }
 
-.hero__image {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+.hero__right {
     position: relative;
 }
 
+.hero__image {
+    width: 100%;
+    height: 100%;
+    margin-top: -100px;
+}
+
 .hero__image img {
-    max-width: 100%;
+    width: 100%;
     height: auto;
-    width: 70%;
-    margin-bottom: 150px;
+    object-fit: contain;
+    margin-bottom: 100px;
+}
+
+
+
+@keyframes fadeInUp {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
 @keyframes fadeInLeft {
@@ -311,17 +329,13 @@ body {
     }
 }
 
-@keyframes fadeInUp {
-    from {
-        opacity: 0;
-        transform: translateY(20px);
-    }
 
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
+
+
+
+
+
+
 
 .explore {
     padding: 8rem 0;
